Fix top navbar on small screen resolution & update registration page

--- a/src/Euro/CoinBundle/Resources/public/css/style.css
+++ b/src/Euro/CoinBundle/Resources/public/css/style.css
@@ -1,6 +1,6 @@
 body {
-	margin-bottom: 50px;
-	margin-top: 50px;
+	padding-bottom: 40px;
+	padding-top: 50px;
 }
 
 #map {
